<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FBReader</string>
    <string name="panel_bookmark">Закладка</string>
    <string name="panel_share">Поделиться</string>
    <string name="panel_copy">Копировать</string>
    <string name="panel_question">Задать вопрос</string>
    <string name="panel_misspell">Опечатка</string>
    <string name="panel_close">Закрыть</string>

    <!-- Navigation panel buttons -->
    <string name="navigation_ok">ОК</string>
    <string name="navigation_cancel">Отмена</string>

    <!-- Search -->
    <string name="search">Поиск…</string>
    <string name="textNotFound">Текст не найден</string>
</resources>
