<?xml version="1.0" encoding="utf-8"?>
<org.geometerplus.android.fbreader.SimplePopupWindow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selection_panel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:focusable="false"
    android:visibility="gone">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/panel"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/selection_panel_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/panel_bookmark"
                android:tooltipText="@string/panel_bookmark"
                android:src="@drawable/popup_bookmark" />

            <ImageView
                android:id="@+id/selection_panel_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/panel_transplate"
                android:tooltipText="@string/panel_transplate"
                android:src="@drawable/popup_translate" />

            <ImageView
                android:id="@+id/selection_panel_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/panel_share"
                android:tooltipText="@string/panel_share"
                android:src="@drawable/popup_share" />

            <ImageView
                android:id="@+id/selection_panel_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/panel_copy"
                android:tooltipText="@string/panel_copy"
                android:src="@drawable/popup_copy" />

            <ImageView
                android:id="@+id/selection_panel_question"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/panel_question"
                android:tooltipText="@string/panel_question"
                android:src="@drawable/baseline_question_mark_24" />

            <ImageView
                android:id="@+id/selection_panel_alert"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/panel_misspell"
                android:tooltipText="@string/panel_misspell"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_missplell" />

            <ImageView
                android:id="@+id/selection_panel_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/panel_close"
                android:tooltipText="@string/panel_close"
                android:src="@drawable/popup_close" />

        </LinearLayout>
    </FrameLayout>
</org.geometerplus.android.fbreader.SimplePopupWindow>
